k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spend-control-ingress
  namespace: spend-control
spec:
  rules:
    - host: spend-control.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: api.spend-control.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: control-service
                port:
                  number: 8000
